<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_location"
            android:icon="@drawable/location"
            android:title="@string/menu_location" />
        <item
            android:id="@+id/nav_services"
            android:icon="@drawable/services"
            android:title="@string/menu_services" />
        <item
            android:id="@+id/nav_presta"
            android:icon="@drawable/presta"
            android:title="@string/menu_presta" />
        <item
            android:id="@+id/nav_contacts"
            android:icon="@drawable/contact"
            android:title="@string/menu_contact" />
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_menu_camera"
            android:title="login" />
    </group>
</menu>