<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">
    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.android.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_checkin"
        android:name="com.example.android.ui.checkin.CheckInFragment"
        android:label="@string/menu_checkin"
        tools:layout="@layout/fragment_checkin" />

    <fragment
        android:id="@+id/nav_services"
        android:name="com.example.android.ui.services.ServicesFragment"
        android:label="Services"
        tools:layout="@layout/fragment_services" />
    <fragment
        android:id="@+id/nav_presta"
        android:name="com.example.android.ui.presta.PrestaFragment"
        android:label="Prestataires"
        tools:layout="@layout/fragment_presta" />
    <fragment
        android:id="@+id/nav_contacts"
        android:name="com.example.android.ui.contacts.ContactsFragment"
        android:label="@string/menu_location"
        tools:layout="@layout/fragment_contacts" />
    <fragment
        android:id="@+id/nav_login"
        android:name="com.example.android.ui.login.LoginFragment"
        android:label="Se Connectationner"
        tools:layout="@layout/fragment_login" />
    <fragment
        android:id="@+id/nav_appart"
        android:name="com.example.android.ui.appart.AppartFragment"
        android:label="Appartement"
        tools:layout="@layout/fragment_appart" />
    <fragment
        android:id="@+id/nav_reservation"
        android:name="com.example.android.ReservationFragment"
        android:label="Reserver"
        tools:layout="@layout/fragment_reservation" />
    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.android.ui.profile.ProfileFragment"
        android:label="Profil"
        tools:layout="@layout/fragment_profile" />
</navigation>